--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -134,23 +134,24 @@
     align-items: center;
     position: fixed;
     left: 0;
-    top: 0vh;
+    top: -100vh;
     width: 100%;
-    bottom: -100vw;
+    /* left: -100vh; */
     padding: 1.5rem 1rem;
+    /* min-height: calc(100vh - 12vh); */
     height: 100vh;
-    background-color: #080808;
-    backdrop-filter: blur(55px);
+    background-color: #080808f3;
     transition: all 0.5s ease;
     opacity: 0;
     z-index: -1;
   }
   .nav__menuList.active {
     transition: all 0.5s ease;
-    bottom: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
     opacity: 1;
     z-index: 9;
-    backdrop-filter: blur(55px);
   }
   .nav__item {
     position: relative;
